--- a/package.json
+++ b/package.json
@@ -43,8 +43,7 @@
     "optional": "^0.1.3",
     "st": "0.2.4",
     "stream-buffers": "^3.0.1",
-    "tap": "^11.1.3",
-    "express": "4.18.2"
+    "tap": "^11.1.3"
   },
   "devDependencies": {
     "browserify": "^13.1.1",
